--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "discover-verona",
   "private": true,
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "dev": "python -m http.server 3000"
   },
   "devDependencies": {
-    "husky": "^8"
+    "husky": "^9",
+    "xmldom": "^0.6.0"
   }
 }
